<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <tn.droidcon.workshop.shooter.app.GameView
        android:id="@+id/game"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

    <TextView
        android:id="@+id/helpText"
        style="@style/helpText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/black"
        android:text="@string/helpText" />

    <Button
        android:id="@+id/startButton"
        style="@style/ButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:text="@string/start" />

    <TextView
        android:id="@+id/timer"
        style="@style/timerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|right"
        android:background="@color/black"
        android:text="@string/timer" />

    <RelativeLayout
        android:id="@+id/control_layout"
        android:visibility="gone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom" >

        <Button
            android:id="@+id/left_direction"
            style="@style/control_button"
            android:layout_alignParentLeft="true"
            android:text="@string/control_button_left_text" />

        <Button
            android:id="@+id/right_direction"
            style="@style/control_button"
            android:layout_toRightOf="@id/left_direction"
            android:text="@string/control_button_right_text" />

         <Button
            android:id="@+id/fire_button"
            style="@style/control_button"
            android:layout_alignParentRight="true"
            android:text="@string/control_button_fire_text" />
    </RelativeLayout>

</FrameLayout>